--- a/b7webGrids.html
+++ b/b7webGrids.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Projeto Bootstrap 4</title>
-  </head>
+</head>
 <body>
     <!-- <div class="container-fluid" style="background-color:royalblue">     pega de ponta a ponta -->
     <div class="container">
@@ -15,15 +15,29 @@
           <h1 class="text-primary">Hello World</h1>
           <button class="btn btn-primary"> Enviar </button>
           
-          <div class="row"> 
-              <div class="col">...</div>
-              <div class="col">...</div>
-              <div class="col">...</div>
+          <!-- <div class="row"> 
+              <div class="col-2 order-2">Primeira</div>
+              <div class="col-2 order-1">Segunda</div>
+              <div class="col order-first">Terceira</div>
               <div class="w-100"></div>
-              <div class="col">...</div>
-              <div class="col">...</div>
-              <div class="col">...</div>
+              <div class="col order-5">...</div>
+              <div class="col order-last">Last</div>
+              <div class="col order-3">Quarto</div>
+          </div> -->
+
+          <div class="container2">
+            <div class="row"> 
+                <div class="w-100">_</div>
+                <div class="col-2">Teste1</div>
+                <div class="col-2">Teste2</div>
+                <div class="col">Teste3</div>
+                <div class="w-100"></div>
+                <div class="col">...</div>
+                <div class="col">Last</div>
+                <div class="col">Quarto</div>
+            </div>
           </div>
+
 
           <script type=text/javascript src="js/bootstrap.bundle.min.js"></script>
           <script type=text/javascript src="jquery/jquery-3.6.0.min.js"></script>
